@@ -8,15 +8,7 @@ decimal.getcontext().prec = 28
 
 
 def xptolvl(xp):
-    # number = ((((5 / 4) * xp) ** (1 / 3)) * 1000)/1000
-    #
-    # whole_number = math.floor(((5 / 4) * xp) ** (1 / 3)) * 1000
-    # print(f"decimal_total: {number}")
-    # if number % 1000 >= 999:
-    #     print("working......")
-    #     return round(((5 / 4) * xp) ** (1/3))
-
-    return math.floor(((5/4)*xp)**(1/3))
+    return math.floor(((5 / 4) * xp) ** (1 / 3))
 
 
 def lvltoxp(lvl):
@@ -29,7 +21,7 @@ class Levels(commands.Cog):
         self.client = client
 
     def is_lvl_up(self, xp, lvl):
-        return xp == lvltoxp(lvl)+1
+        return xp == lvltoxp(lvl) + 1
 
     @commands.Cog.listener()
     async def on_message(self, message):
@@ -47,8 +39,15 @@ class Levels(commands.Cog):
             RETURNING xp
             """, message.author.id, message.guild.id
         )
+        await self.client.pg_con.execute(
+            f"""
+            INSERT INTO money.bank(user_id, guild_id, money, daily_streak)
+            VALUES ({message.author.id}, {message.guild.id}, 0, 0)
+            ON CONFLICT (user_id, guild_id) DO
+            UPDATE SET money = bank.money + 0 
+            """
+        )
         lvl = xptolvl(xp)
-        # print(f"lvl: {lvl}")
         await self.client.pg_con.execute(
             "UPDATE levels.users SET lvl = $1 "
             "WHERE user_id = $2 AND guild_id =$3",
@@ -60,7 +59,7 @@ class Levels(commands.Cog):
                                        f"Upon leveling up, you've been granted {LEVEL_UP_MONEY} coins!")
             await self.client.pg_con.execute(
                 "UPDATE money.bank SET money = bank.money + $1 WHERE user_id = $2 AND guild_id = $3",
-                100, message.author.id, message.guild.id
+                LEVEL_UP_MONEY, message.author.id, message.guild.id
             )
 
 
